Site header: Fix header alignment at exactly 600px wide
The media query was 1px off from the media query on the admin bar, which caused the header to appear to float detached from the admin bar. This fixes the header, so that it stays with the admin bar when it un-stickies.

--- a/source/wp-content/themes/wporg-news-2021/sass/components/_site-header.scss
+++ b/source/wp-content/themes/wporg-news-2021/sass/components/_site-header.scss
@@ -1,6 +1,6 @@
 html[lang] {
 
-	@include break-small {
+	@media (min-width: 601px) {
 		margin-top: calc(var(--wp-global-header-offset, 0px) + var(--local-header-height));
 		scroll-padding-top: calc(var(--wp-global-header-offset, 0px) + var(--local-header-height));
 	}
@@ -15,7 +15,7 @@ html[lang] {
 
 	z-index: 99;
 
-	@include break-small {
+	@media (min-width: 601px) {
 		position: fixed;
 		top: var(--wp-admin--admin-bar--height, 0);
 		left: 0;
